--- a/src/index.html
+++ b/src/index.html
@@ -27,8 +27,8 @@
           </case>
           <case n="'graphic'">
             <div class="graphic">
-              <if condition="item.value.asset === 'graphic-name.html'">
-                <include src="graphic-name.html"></include>
+              <if condition="item.value.asset === 'lede-draft.html'">
+                <include src="lede-draft.html"></include>
               </if>
             </div>
           </case>
@@ -59,6 +59,12 @@
             <div class="graphic">
               <if condition="item.value.asset === 'graphic-name.html'">
                 <include src="graphic-name.html"></include>
+              </if>
+              <if condition="item.value.asset === 'scale-draft.html'">
+                <include src="scale-draft.html"></include>
+              </if>
+              <if condition="item.value.asset === 'funding-flowchart.html'">
+                <include src="funding-flowchart.html"></include>
               </if>
             </div>
           </case>
